# lager

./: .gitignore  BOX_CONFIG_CLEANUP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  NOTICE  README.md  RELEASE_PROCESS.md  SECURITY.md
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: hardware-tests.yml  integration-tests.yml  unit-tests.yml  update-regression.yml
box/: LICENSE  README.md  factory.py  start_box.sh  start_box_mac.sh
box/lager/: README.md  __init__.py  actuate.py  adc_hs.py  arm_hs.py  ble.py  box_auth.py  box_http_server.py  box_origin.py  breakpoint.py  cache.py  cli_output.py  constants.py  control_plane_client.py  core.py  dac_hs.py  energy_hs.py  exceptions.py  gpio_hs.py  hardware_service.py  i2c_hs.py  lock_state.py  log.py  process_utils.py  rotation.py  solar_hs.py  spi_hs.py  state_dir.py  thermocouple_hs.py  usb_enum.py  util.py  watt_hs.py
cli/: LICENSE  README.md  __init__.py  __main__.py  address_utils.py  box_http.py  box_storage.py  box_token.py  config.py  errors.py  exceptions.py  gateway_auth.py  main.py  options.py  output.py  pyproject.toml  safe_unpickle.py  setup.py  simple_hdlc.py  sort_utils.py  status.py  update_check.py
clients/rust/lager-net/: Cargo.toml  README.md
clients/rust/lager-net/examples/: adc.rs  demo.rs  gpio.rs  supply.rs
clients/rust/lager-net/src/: client.rs  lib.rs  roles.rs
docs/: diagnose.md  docs.json  package.json
test/: CONVENTIONS.md  COVERAGE.md  README.md  __init__.py  requirements-unit.txt  test_errors.py  test_format_lock_user.py
tools/: pdf_pages.py
(+938 files in other folders)
